--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
-    "express-openid-connect": "^2.17.1"
+    "express-openid-connect": "^2.17.1",
+    "firebase": "^10.14.1"
   }
 }
