--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/sssynk/dubhacks-circles#readme",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-openid-connect": "^2.17.1",
     "firebase": "^10.14.1"
