--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-openid-connect": "^2.17.1",
-    "firebase": "^10.14.1"
+    "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0"
   }
 }
