--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.1",
     "express-openid-connect": "^2.17.1",
     "firebase": "^10.14.1",
-    "firebase-admin": "^12.6.0"
+    "firebase-admin": "^12.6.0",
+    "openai": "^4.67.3"
   }
 }
